# wraeclast-whisperer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  RESPONSIBLE_AI.md  chainlit.md  docker-compose.yaml  environment.yaml  fly.toml  pyproject.toml
.chainlit/: config.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
app/: app.py  create_assistant.py  main.py  settings.py
app/.chainlit/: config.toml
app/helpers/: _render.py  assistant.py  events.py  rag.py  render.py  scrape.py  users.py
app/tools/: base.py  fetch_sitemap.py  load_page_content.py  sitemap_crawler.py  wiki.py  wiki_page.py  wiki_search.py
data/: README.md  all-wiki-pages.txt  datalayer_init.sql
notes/: data_acquisition.txt  fly.io.md  testing-prompts.txt  testing_prompts.txt
scripts/: create_user.py  entrypoint.sh  game_data_ingest.py  initialize_agent.py  install_datalayer.sh  playwright_example.py  scrape_webpage_example.py  settings.py
src/: main.py
src/wraeclast_whisperer/: assistant.py  helpers.py  panel.py  settings.py  tools.py
templates/: agent_instructions.jinja2  fetch_sitemap_description.jinja2  load_page_content_description.jinja2  sitemap_crawler_description.jinja2  wiki_page_description.jinja2  wiki_search_description.jinja2  wiki_search_results.jinja2
wraeclast-whisperer/scripts/: panel-assistant-api-example.py  panel-openai-example.py  search-poe2wiki-example.py
wraeclast-whisperer/src/: initialize_agent.py  tools.py
