[tool.black]
line-length = 119
target-version = ['py310']

[tool.poetry]
name = "wraeclast-whisperer"
version = "0.0.1"
description = "An Agentic Path of Exile Assistant"
authors = ["darecstowell"]
readme = "README.md"

packages = [
    { include = "wraeclast_whisperer", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.57.4"
pymediawiki = "^0.7.4"
chainlit = "^1.3.2"
pydantic = "2.10.1" # pinned to fix chanlit issue
jinja2 = "^3.1.5"
