[tool.black]
line-length = 119
target-version = ['py310']

[tool.poetry]
name = "wraeclast-whisperer"
version = "0.0.2"
description = "An Agentic Path of Exile Assistant"
authors = ["darecstowell"]
readme = "README.md"

packages = [
    { include = "wraeclast_whisperer", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.57.4"
pymediawiki = "^0.7.4"
chainlit = "^2.0.0"
pydantic = "2.10.1" # pinned to fix chanlit issue
jinja2 = "^3.1.5"
playwright = "^1.49.1"
