[tool.black]
line-length = 119
target-version = ['py310']

[tool.poetry]
name = "wraeclast-whisperer"
version = "0.0.2"
description = "An Agentic Path of Exile Assistant"
authors = ["darecstowell"]
readme = "README.md"

packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.57.4"
pymediawiki = "^0.7.4"
chainlit = "^2.0.0"
pydantic = "^2.10.1"
jinja2 = "^3.1.5"
playwright = "^1.49.1"
asyncpg = "*"
colorama = "^0.4.6" # added to fix poetry install issue
aiohttp = "^3.11.11"
bcrypt = "^4.2.1"
pgvector = "^0.3.6"
sqlalchemy = "^2.0.37"
